--- a/assets/zndsk-admin.css
+++ b/assets/zndsk-admin.css
@@ -249,7 +249,7 @@ span[data-status="new"] {
     position: static !important;
 }
 
-#mwb-zndsk-dvsource, #mwb-zndsk-dvdest {
+.mwb-zndsk-field-drop {
     border: 5px solid #ccc;
     padding: 5px;
     min-height: 100px;
